// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CarbonMonoxide Reducer Tests State Changes should load city on success of loading 1`] = `
Object {
  "accuracy": 2,
  "carbonMonoxide": Object {},
  "dateTime": "2019-07-12",
  "error": undefined,
  "isLoading": false,
}
`;

exports[`CarbonMonoxide Reducer Tests State Changes should save error on error of loading 1`] = `
Object {
  "accuracy": 2,
  "carbonMonoxide": undefined,
  "dateTime": "2019-07-12",
  "error": "Error",
  "isLoading": false,
}
`;
